--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,17 @@
   }
 }
 
+.glassmorphism{
+  background: rgba(255, 255, 255, 0.25);
+  -webkit-backdrop-filter: blur(4x);
+  backdrop-filter: blur(4px);
+}
+.glassmorphism2 {
+  background: rgba(18, 17, 17, 0.25);
+  -webkit-backdrop-filter: blur(8x);
+  backdrop-filter: blur(8px);
+}
+
 .cl-providerIcon__github{
   filter: invert(1);
 }
